<resources>
    <string name="app_name">HalenGo</string>

    <string name="okupering_tid">Hur länge är vindskyddet upptaget?</string>

    <string name="ved">Hur mycket ved finns kvar?</string>
    <string name="ved_alt1">Lite/Inget</string>
    <string name="ved_alt2">Lagom</string>
    <string name="ved_alt3">Fullt</string>

    <string name="plats">Hur ser platsen ut?</string>
    <string name="plats_alt2">Vällskött</string>
    <string name="plats_alt1">Behöver städas</string>

    <string name="camera_button">open camera</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="logga_information">Logga information</string>
    <string name="hur_l_nge_kommer_ni_stanna">Hur länge kommer ni stanna?</string>
    <string name="bildbeskrivning">Bild på vindskydd</string>
    <string name="skicka">Skicka</string>
    <string name="v_lj_vindskydd">Välj vindskydd</string>
    <string name="tvatthallarna">Tvätthallarna</string>
    <string name="myllevik">Myllevik</string>
    <string name="bergatorpet">Bergatorpet</string>
    <string name="alltidhult">Alltidhult</string>


</resources>