<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fin_bild"
        android:layout_width="414dp"
        android:layout_height="218dp"
        android:background="@drawable/shadow"
        android:backgroundTint="#272323"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tvatthallarna_cover"
        android:contentDescription="@string/bildbeskrivning" />

    <TextView
        android:id="@+id/valt_vindskydd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/okuperings_tid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fin_bild"
        app:layout_constraintVertical_bias="0.509"
        tools:text="Vindskydd" />

    <TextView
        android:id="@+id/okuperings_tid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="72dp"
        android:text="@string/okupering_tid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fin_bild" />

    <TextView
        android:id="@+id/ved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/ved"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/okuperings_tid" />

    <RadioGroup
        android:id="@+id/ved_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ved">

        <RadioButton
            android:id="@+id/ved_1_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ved_alt1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="441dp" />

        <RadioButton
            android:id="@+id/ved_2_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ved_alt2"
            app:layout_constraintEnd_toStartOf="@+id/radioButton3"
            app:layout_constraintHorizontal_bias="0.532"
            app:layout_constraintStart_toEndOf="@+id/radioButton"
            tools:layout_editor_absoluteY="441dp" />

        <RadioButton
            android:id="@+id/ved_3_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ved_alt3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="441dp" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/plats_radio_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plats_skick">

        <RadioButton
            android:id="@+id/skick_1_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/plats_alt1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="606dp" />


        <RadioButton
            android:id="@+id/skick_2_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plats_alt2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/radioButton4"
            tools:layout_editor_absoluteY="606dp" />


    </RadioGroup>

    <TextView
        android:id="@+id/plats_skick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/plats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ved_radio" />



</androidx.constraintlayout.widget.ConstraintLayout>